# reason-code

./: .gitignore  README.md  augmented_sft_data.jsonl  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmarks/: humaneval_test.py  performance_test.py
examples/: demo_workflow.py  test_router.py
src/: config.py  evaluator.py  llm.py  mcts_enhanced.py  persistent_sandbox.py  sandbox.py  self_correction.py  servers.py
src/reason_code/agent/: mcts.py  reflexion.py  retriever.py
src/reason_code/api/: app.py
src/reason_code/executor/: evaluator.py  sandbox.py
src/reason_code/models/: base.py  llm.py  openai_adapter.py  router.py
src/reason_code/tools/: builtins.py  registry.py
src/reason_code/utils/: config.py  logger.py  trace.py
src/reason_code/workflow/: engine.py  node.py  nodes_impl.py
tests/: test_basic.py
tools/: augment_training_data.py  compare_results.py  export_sft.py  finetune_lora.py  score_real.py  self_evolution.py
